Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-37798

Swap rebalance R1.1 test fails with reason mover_crashed

    XMLWordPrintable

Details

    • Untriaged
    • Unknown
    • Magma: Jan 20 - Feb 2

    Description

      Build: 1006.5.1-1039

      Job: http://perf.jenkins.couchbase.com/job/magma-hidd/882/

      Logs:

      https://s3-us-west-2.amazonaws.com/perf-artifacts/jenkins-magma-hidd-882/172.23.97.21.zip

      https://s3-us-west-2.amazonaws.com/perf-artifacts/jenkins-magma-hidd-882/172.23.97.22.zip

      https://s3-us-west-2.amazonaws.com/perf-artifacts/jenkins-magma-hidd-882/172.23.97.23.zip

      https://s3-us-west-2.amazonaws.com/perf-artifacts/jenkins-magma-hidd-882/172.23.97.24.zip

      https://s3-us-west-2.amazonaws.com/perf-artifacts/jenkins-magma-hidd-882/172.23.97.27.zip

      Error: 

      "completionMessage": "Rebalance exited with reason {mover_crashed,                              {unexpected_exit,
                                     {'EXIT',<0.3785.27>,
                                      {{bulk_set_vbucket_state_failed,
                                        [{'ns_1@172.23.97.22',
                                          {'EXIT',
                                           {{{badmatch,
                                              {error,
                                               {setup_replications_failed,
                                                [{'ns_1@172.23.97.27',
                                                  {errors,[{134,865}]}}]}}},
                                             [{janitor_agent,
                                               handle_apply_vbucket_state,2,
                                               [{file,\"src/janitor_agent.erl\"},
                                                {line,1073}]},
                                              {janitor_agent,
                                               apply_vbucket_states_worker_loop,0,
                                               [{file,\"src/janitor_agent.erl\"},
                                                {line,1062}]},
                                              {proc_lib,init_p,3,
                                              [{file,\"proc_lib.erl\"},{line,232}]}]},
                                            {gen_server,call,
                                             [{'janitor_agent-bucket-1',
                                               'ns_1@172.23.97.22'},
                                              {if_rebalance,<0.19945.18>,
                                               {update_vbucket_state,865,replica,
                                                undefined,'ns_1@172.23.97.27'}},
                                              infinity]}}}}]},
                                       [{janitor_agent,bulk_set_vbucket_state,4,
                                         [{file,\"src/janitor_agent.erl\"},
                                          {line,403}]},
                                        {ns_single_vbucket_mover,
                                         update_replication_post_move,5,
                                         [{file,\"src/ns_single_vbucket_mover.erl\"},
                                          {line,530}]},
                                        {ns_single_vbucket_mover,on_move_done_body,
                                         6,
                                         [{file,\"src/ns_single_vbucket_mover.erl\"},
                                          {line,556}]},
                                        {proc_lib,init_p,3,
                                         [{file,\"proc_lib.erl\"},{line,232}]}]}}}}."

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              bo-chun.wang Bo-Chun Wang
              bo-chun.wang Bo-Chun Wang
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty